test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/assign_to_incomplete_var.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        None: 
        Structure: 
          TIdentifier: s
          Bool: 0
        CExtern: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: y
        None: 
        Structure: 
          TIdentifier: s
          Bool: 0
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CVar: 
                    TIdentifier: y
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
